--- a/app/views/cart/cart.html.erb
+++ b/app/views/cart/cart.html.erb
@@ -36,7 +36,7 @@
             <p>Unit Price: <%= number_to_currency(cart_item.birdhouse.Price) %></p>
             <p>Total Price: <span id="item-total-<%= cart_item.id %>"><%= number_to_currency(cart_item.quantity * cart_item.birdhouse.Price) %></span></p>
             
-            <td><%= link_to "Remove", cart_path(), method: :delete, data: { turbo: false } %></td>
+            <td><%= button_to "Remove", buy_now_path(cart_item), method: :delete, data: { turbo: false } %></td>
 
           </div>
         </div>
