--- a/app/views/cart/cart.html.erb
+++ b/app/views/cart/cart.html.erb
@@ -33,8 +33,8 @@
                 <% end %>
               </select>
             </p>
-            <p>Unit Price: <%= number_to_currency(cart_item.birdhouse.Price) %></p>
-            <p>Total Price: <span id="item-total-<%= cart_item.id %>"><%= number_to_currency(cart_item.quantity * cart_item.birdhouse.Price) %></span></p>
+            <p>Unit Price: <%= number_to_currency(cart_item.birdhouse.price) %></p>
+            <p>Total Price: <span id="item-total-<%= cart_item.id %>"><%= number_to_currency(cart_item.quantity * cart_item.birdhouse.price) %></span></p>
             
             <td><%= button_to "Remove", buy_now_path(cart_item), method: :delete, data: { turbo: false } %></td>
 
