--- a/app/views/users/history.html.erb
+++ b/app/views/users/history.html.erb
@@ -34,14 +34,22 @@
 </head>
   <body>
     <h1>Purchase History</h1>
-
     <div class="container">
-      <!--<% @orders.each do |order| %>
-      <% order.birdhouses.each do |birdhouse| %>
-        <div class="birdhouse-item">
-          <%= image_tag "birdhouse#{birdhouse.id}.jpg", class: 'birdhouse-image' %>
-        </div>
-      <% end %>
+    <% @orders.each do |order| %>
+      <div>
+        <%= image_tag "birdhouse4.jpg", class: 'birdhouse-image' %>
+      <h3>Order ID: <%= order.id %></h3>
+      <p>Total cost: <%= order.total_cost %></p>
+      <p>Shipping Address: <%= order.shipping_address %></p>
+      <p>Payment details: <%= order.card_type %> ending with <%= order.card_number.to_s[-4..-1] %></p>
+      <%= link_to 'Add Review', '#', class: 'review-button' %>
+        <!-- Other order details -->
+      </div>
+    <% end %>
+    </div>
+
+    <!--<div class="container">
+      <% @orders.each do |order| %>
           <h3>Order ID: <%= order.id %></h3>
           
           <p>Total cost: <%= order.total_cost %></p>
@@ -51,20 +59,58 @@
           <%= link_to 'Add Review', '#', class: 'review-button' %>
 
       <% end %>-->
+
+      <!--<div class="container">
       <% @orders.each do |order| %>
+        <% order.line_items.each do |line_item| %>
+        <div class="birdhouse-item">
+      <%= image_tag("birdhouse#{line_item.birdhouse.id}.jpg", alt: 'Birdhouse image', class: 'birdhouse-image') %>
+          <div class="birdhouse-item">
+            <%= image_tag "birdhouse#{birdhouse.id}.jpg", class: 'birdhouse-image' %>
+          <% end %>
+            <div class="birdhouse-details">
+              <p>Total cost: <%= order.total_cost %></p>
+          <p>Shipping Address: <%= order.shipping_address %></p>
+          <p>Payment details: <%= order.card_type %> ending with <%= order.card_number.to_s[-4..-1] %></p>
+          
+          <%= link_to 'Add Review', '#', class: 'review-button' %>
+              
+            </div>
+          </div>
+        <% end %>
+      </div>-->
+      <div class="container">
+  <!--<% @orders.each do |order| %>
     <% order.line_items.each do |line_item| %>
       <div class="birdhouse-item">
-        <%= image_tag "birdhouse#{line_item.birdhouse.id}.jpg", class: 'birdhouse-image' %>
-        <!-- Add more details you want to display for each item -->
+        <%= image_tag("birdhouse#{line_item.birdhouse.id}.jpg", alt: 'Birdhouse image', class: 'birdhouse-image') %>
+        <div class="birdhouse-details">
+           Details about the birdhouse 
+        </div>
       </div>
     <% end %>
-    <!-- Order details -->
-    <h3>Order ID: <%= order.id %></h3>
-    <p>Total cost: <%= number_to_currency(order.total_cost) %></p>
-    <p>Shipping Address: <%= order.shipping_address %></p>
-    <p>Payment details: <%= order.card_type %> ending with <%= order.card_number.to_s[-4..] %></p>
-    <%= link_to 'Add Review', '#', class: 'review-button' %>
+    <div class="order-details">
+      <h3>Order ID: <%= order.id %></h3>
+      <p>Total cost: <%= order.total_cost %></p>
+      <p>Shipping Address: <%= order.shipping_address %></p>
+      <p>Payment details: <%= order.card_type %> ending with <%= order.card_number.to_s[-4..-1] %></p>
+      <%= link_to 'Add Review', '#', class: 'review-button' %>
+    </div>
+  <% end %>-->
+  <!--<% @user.orders.each do |order| %>
+    <% order.birdhouses.each do |birdhouse| %>
+    <%= image_tag "birdhouses/#{birdhouse.id}.jpg", alt: "Birdhouse Image" %>
   <% end %>
+    <div class="order-details">
+      <h3>Order ID: <%= order.id %></h3>
+      <p>Total cost: <%= order.total_cost %></p>
+      <p>Shipping Address: <%= order.shipping_address %></p>
+      <p>Payment details: <%= order.card_type %> ending with <%= order.card_number.to_s[-4..-1] %></p>
+      <%= link_to 'Add Review', '#', class: 'review-button' %>
+    </div>
+  <% end %>-->
+</div>
+
     </div>
     
   </body>
