Keerthi-U09 Edit listings in inventory.

--- a/app/views/birdhouse/inventory.html.erb
+++ b/app/views/birdhouse/inventory.html.erb
@@ -82,7 +82,7 @@
                         <p class="price"> Quantity: <%= birdhouse.quantity %></p>
                         <p class="price">$<%= '%.2f' % birdhouse.price %></p>
                         <%= link_to "Select", listings_show_path(birdhouse), class: 'select-button' %>
-                        <%= link_to 'Edit', 'edit_birdhouse_path(birdhouse)', class: 'select-button' %> 
+                        <%= link_to 'Edit', edit_birdhouse_path(birdhouse), class: 'select-button' %> 
                         <%= link_to 'Delete', birdhouse, method: :delete, data: { confirm: 'Are you sure?' }, class: 'select-button' %>
                     </div>
                     </div>
