santhosh US10 delete listing in inventory

--- a/app/views/birdhouse/inventory.html.erb
+++ b/app/views/birdhouse/inventory.html.erb
@@ -83,7 +83,7 @@
                         <p class="price">$<%= '%.2f' % birdhouse.price %></p>
                         <%= link_to "Select", listings_show_path(birdhouse), class: 'select-button' %>
                         <%= link_to 'Edit', edit_birdhouse_path(birdhouse), class: 'select-button' %> 
-                        <%= link_to 'Delete', birdhouse, method: :delete, data: { confirm: 'Are you sure?' }, class: 'select-button' %>
+                       <%= button_to 'Delete', delete_listing_path(birdhouse), method: :delete, data: { confirm: 'Are you sure?'}, class: 'btn btn-danger delete-item-btn' %>
                     </div>
                     </div>
                 <% end %>
