--- a/app/views/users/history.html.erb
+++ b/app/views/users/history.html.erb
@@ -33,11 +33,11 @@
   </style>
 </head>
   <body>
-    <h1>Purchase History</h1>
+   <h1>Purchase History</h1>
     <div class="container">
     <% @orders.each do |order| %>
       <div>
-        <%= image_tag "birdhouse4.jpg", class: 'birdhouse-image' %>
+        <!--<%= image_tag "birdhouse4.jpg", class: 'birdhouse-image' %>-->
       <h3>Order ID: <%= order.id %></h3>
       <p>Total cost: <%= order.total_cost %></p>
       <p>Shipping Address: <%= order.shipping_address %></p>
@@ -47,6 +47,7 @@
       </div>
     <% end %>
     </div>
+ 
 
     <!--<div class="container">
       <% @orders.each do |order| %>
@@ -79,7 +80,7 @@
           </div>
         <% end %>
       </div>-->
-      <div class="container">
+      <!--<div class="container">-->
   <!--<% @orders.each do |order| %>
     <% order.line_items.each do |line_item| %>
       <div class="birdhouse-item">
