--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -176,7 +176,7 @@
         <li><a href="/">Home</a></li>
         <li><%= link_to "Listings", listings_path %></li>
         <li><%= link_to "Guide", guide_path %></li>
-        <li><%= link_to "Customization", '#' %></li>
+        <li><%= link_to "Customization", customization_path %></li>
         <li><%= link_to "Gallery", gallery_path %></li>
         <li><%= link_to "About Us", aboutus_path %></li>
       </ul>
