US08 Add New Listings Completed

--- a/app/views/birdhouse/gallery.html.erb
+++ b/app/views/birdhouse/gallery.html.erb
@@ -3,7 +3,7 @@
 <div class="gallery-container">
   <% @birdhouses.each do |birdhouse| %>
     <div class="gallery-item">
-      <%= image_tag "birdhouse#{birdhouse.id}.jpg", class: 'birdhouse-image' %>
+          <%= image_tag url_for(birdhouse.figure_image), style:'width: 200px; height: 200px;'%>
       <p class="birdhouse-style"><%= birdhouse.style.capitalize %></p>
       <p class="birdhouse-likes">Likes: <%= birdhouse.likes %></p>
       <%= button_to 'Upvote', upvote_birdhouse_path(birdhouse), method: :put, class: 'upvote-button'%>
