--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -11,6 +11,12 @@ body {
   background: white;
   color: black;
 }
+body, html {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+}
 
 /* Navigation bar styling */
 nav ul {
@@ -46,9 +52,29 @@ a {
 footer {
   margin-top: 20px;
 }
+.bg-image {
+      background-image: url('/assets/homebg.png');
+      height: 100%;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      position: relative;
+    }
+
+    /* Optional: Add a background overlay */
+    .bg-image::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      background-color: rgba(0, 0, 0, 0.5); /* Dark overlay for better text readability */
+      z-index: -1;
+    }
 </style>
 </head>
-<body>
+<body >
   <div style = "background-image: url('/assets/homebg.png');height: 820px;background-position: center;background-repeat: no-repeat;background-size: cover; ">
 
   <section class="intro">
